# standalone-civitai-shortcut

./: .coveragerc  .dockerignore  .flake8  .gitignore  AGENTS.md  CHANGELOG.md  CivitaiShortCutSetting.json.backup  Dockerfile  README.md  README_STANDALONE.md  conftest.py  debug_send_to_recipe.py  debug_send_to_recipe_detailed.py  docker-compose.yml  gradio.py  install.py  main.py  patch_audioop.py  pyproject.toml  requirements.txt  settings.json  sitecustomize.py  standalone_launcher.py  start.bat  start.sh  style.css  test_comprehensive_fix.py  test_event_conflict.py  test_fix_verification.py  test_recipe_function.py  test_recipe_input_validation.py  test_shortcut_path_fix.py  ui_adapter.py
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/codex/: 002-compatibility-layer-implementation-report.md  architecture_overview.md  interface_specifications.md  testing_guidelines.md
.github/instructions/: python-guidelines.instructions.md  remove-refactored-entry-point.instructions.md
.github/prompts/: create-plan.prompt.md  write-report.prompt.md
.github/reports/: 001-dependency-analysis-report.md  002-compatibility-layer-implementation-report.md  002-compatibility-layer-report.md  003-webui-function-simulation-implementation.md  004-png-info-extraction-webui-alignment-report.md  005-standalone-config-manager-refator-report.md  006-standalone-metadata-processor-a1111-alignment-report.md  007-path-manager-update-report.md  008-sampler-provider-a1111-alignment-report.md  009-standalone-entry-point-report.md  01-dependency-analysis-completion-report.md  010-module-dependency-modification-report.md  011-ui-components-dual-mode-adaptation-report.md  012-ui-components-dual-mode-adaptation-code-review-report.md  012-ui-components-dual-mode-adaptation-report.md  013-fix-pytest-errors-report.md  013-ui-components-backlog-completion-report.md  014-testing-quality-assurance-report.md  016-fix-flake8-tests-compat-report.md  017-flake8-warnings-report.md  018-install-script-report.md  019-util-setting-circular-import-bugfix-report.md  020-fix-standalone-pnginfo-bug-report.md  021-png-info-extraction-fix-report.md  022-fix-gallery-select-attributeerror-report.md  023-fix-civitai-gallery-pnginfo-extraction-report.md  024-prompt-recipe-name-validation-enhancement-report.md  025-gallery-select-bugfix-report.md  026-evt-value-list-bugfix-report.md  027-fix-user-gallery-generate-info-report.md  028-civitai-gallery-generate-info-fix-report.md  029-civitai-user-gallery-generate-info-fix-report.md  030-model-information-generate-info-fix-report.md  031-model-information-civitai-api-fallback-report.md  032-open-folder-bugfix-report.md  (+38 more)
config/: default_config.json
dev-tools/: README.md  dev_tools.py  validate_code.py
docs/: REPORT_TEMPLATE.md  architecture_overview.md  container_environment.md  exception_handling_guide.md  http_client_guide.md  interface_specifications.md  logging_migration_analysis.md  report_guidelines.md  settings_guidelines.md  testing_guidelines.md  usage_examples.md  user_guide.md
scripts/: civitai_shortcut.py
tests/: __init__.py  conftest.py  run_integration_tests.py  test_adapters.py  test_async_download.py  test_attribute_error_fix.py  test_civitai.py  test_civitai_gallery_action.py  test_civitai_gallery_generate_info.py  test_civitai_model_info_error.py  test_cli.py  test_client_manager.py  test_compat_layer.py  test_download_task_manager.py  test_download_utilities.py  test_downloader.py  test_downloader_lora_metadata.py  test_environment_detector.py  test_environment_detector_extra.py  test_error_handler.py  test_error_handler_ui_decoupling.py  test_evt_value_list_fix.py  test_exact_auto1111_format.py  test_exceptions.py  test_file_downloader.py  test_gallery_comprehensive.py  test_gallery_download_manager.py  test_gallery_event_handlers.py  test_gallery_event_refactor.py  test_gallery_final_coverage.py  test_gallery_focused_coverage.py  test_gallery_select_fix.py  test_gallery_utilities.py  test_http_and_file_downloaders.py  test_http_client.py  test_http_client_manager.py  test_image_download_limit.py  test_image_downloader.py  test_integration.py  test_interfaces.py  (+49 more)
(+196 files in other folders)
